<resources>
    <string name="app_name">Find It</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_scan_qr">Scan QR</string>
    <string name="bottom_nav_setting">Setting</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="setting_fragment">Setting Fragment</string>
    <string name="title_activity_qr_scanner">QrScannerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="scan_a_qr_code">Scan a QR code</string>
    <string name="title_activity_campus">CampusActivity</string>
    <string name="tab_text_1">Destination</string>
    <string name="tab_text_2">Service</string>
    <string name="tab_text_3">Review</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="loading">Loading...</string>
    <string name="find_it_logo">Find It logo</string>
    <string name="share_experience">Share your experience about this place</string>
    <string name="post">Post</string>
    <string name="ar_tutorial">AR tutorial</string>
    <string name="clear">Clear</string>
    <string name="resolve">Resolve</string>
    <string name="start">Start</string>
    <string name="place_visited">Places you visited</string>
    <string name="cre_hcmut">Cre: HCMUT</string>
    <string name="where_you_want_to_go">Where you want to go?</string>
    <string name="place_map">Place map</string>
    <string name="services">Services</string>
    <string name="your_sharing">Your sharing</string>
    <string name="share_thought">Share your thoughts about this place</string>
    <string name="recently">Recently</string>
    <string name="most_useful">Most useful</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="setting">Setting</string>
    <string name="your_account">Your account</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="useful">Useful</string>
    <string name="not_useful">Not useful</string>

</resources>