<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="placeViewModel"
            type="com.solution_challenge_2022.findit.findit_feature.presentation.place_info.ui.PlaceViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".findit_feature.presentation.place_info.ui.review.ReviewFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="4.6"
                        android:textColor="@color/black"
                        android:textSize="36sp" />

                    <androidx.appcompat.widget.AppCompatRatingBar
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rating="4.6"
                        android:theme="@style/RatingBarCustom" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="(1000+)"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progress="85"
                        app:indicatorColor="@color/yellow"
                        app:trackColor="@color/grey_more_light"
                        app:trackCornerRadius="30dp" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:progress="40"
                        app:indicatorColor="@color/yellow"
                        app:trackColor="@color/grey_more_light"
                        app:trackCornerRadius="30dp" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:progress="20"
                        app:indicatorColor="@color/yellow"
                        app:trackColor="@color/grey_more_light"
                        app:trackCornerRadius="30dp" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:progress="10"
                        app:indicatorColor="@color/yellow"
                        app:trackColor="@color/grey_more_light"
                        app:trackCornerRadius="30dp" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:progress="15"
                        app:indicatorColor="@color/yellow"
                        app:trackColor="@color/grey_more_light"
                        app:trackCornerRadius="30dp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/grey_more_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_sharing"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share_thought"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/placeholder"
                        app:imageUrl="@{placeViewModel.profileUrl}"
                        app:riv_corner_radius="8dp" />

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:scaleX=".7"
                        android:scaleY=".7"
                        android:theme="@style/RatingBarCustom"
                        android:transformPivotX="32dp"
                        android:transformPivotY="32dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/grey_more_light" />


            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/recently"
                        android:textColor="@color/black"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:checkedIconTint="@color/blue_secondary"
                        app:chipBackgroundColor="@color/white"
                        app:chipStrokeColor="@color/grey_more_light"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:checkable="true"
                        android:text="@string/most_useful"
                        android:textColor="@color/black"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:checkedIconTint="@color/blue_secondary"
                        app:chipBackgroundColor="@color/white"
                        app:chipStrokeColor="@color/grey_more_light"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:checkable="true"
                        android:text="@string/positive"
                        android:textColor="@color/black"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:checkedIconTint="@color/blue_secondary"
                        app:chipBackgroundColor="@color/white"
                        app:chipStrokeColor="@color/grey_more_light"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:checkable="true"
                        android:text="@string/negative"
                        android:textColor="@color/black"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:checkedIconTint="@color/blue_secondary"
                        app:chipBackgroundColor="@color/white"
                        app:chipStrokeColor="@color/grey_more_light"
                        app:chipStrokeWidth="1dp" />

                </LinearLayout>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:listData="@{placeViewModel.reviewList}"
                tools:listitem="@layout/review_item" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>