<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="placeViewModel"
            type="com.solution_challenge_2022.findit.findit_feature.presentation.place_info.ui.PlaceViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/destinationSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/grey_more_light"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/blue_primary_light"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:srcCompat="@drawable/ic_search" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/where_you_want_to_go" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_map_24" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:text="@string/place_map" />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardCampusMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/grey_more_light"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/placeholder"
                        app:imageUrl="@{placeViewModel.placeInfo.mapLink}"
                        app:riv_corner_radius_bottom_left="8dp"
                        app:riv_corner_radius_bottom_right="8dp"
                        app:riv_corner_radius_top_left="8dp"
                        app:riv_corner_radius_top_right="8dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/loading"
                        android:text="@{placeViewModel.placeInfo.campusName}"
                        android:textColor="@color/blue_secondary_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@{placeViewModel.placeInfo.address}"
                        android:textColor="@color/grey"
                        android:textSize="12sp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/youAreHere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_person_pin_circle_24"
                    app:tint="@color/red" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:text="You are here"
                    android:textColor="@color/red" />
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/currentBuilding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/red"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/ivCurrentPosition"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:maxWidth="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/placeholder"
                        app:imageUrl="@{placeViewModel.currentBuilding.imageLink}"
                        app:riv_corner_radius_bottom_left="8dp"
                        app:riv_corner_radius_bottom_right="8dp"
                        app:riv_corner_radius_top_left="8dp"
                        app:riv_corner_radius_top_right="8dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/loading"
                            android:maxWidth="200dp"
                            android:text="@{placeViewModel.currentBuilding.buildingName}"
                            android:textColor="@color/blue_secondary_dark" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:ellipsize="end"
                            android:maxWidth="200dp"
                            android:maxLines="3"
                            android:text="@{placeViewModel.currentBuilding.desc}"
                            android:textColor="@color/grey" />
                    </LinearLayout>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_fast_forward_24" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:text="Popular areas" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPopularAreas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:listData="@{placeViewModel.popularAreasList}"
                app:spanCount="2"
                tools:listitem="@layout/popular_area_item" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>